--- a/_data/style.yml
+++ b/_data/style.yml
@@ -1,7 +1,7 @@
 #Color Customization
 #highlight: "#54bfff"
 #white: "#FF0000"
-#black: "#000"
+black: "#54bfff"
 
 #Image Customization
 header-image: "../img/header-bg.jpg"
